// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          填充按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          描边按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          填充按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          描边按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-dashed"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-text"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-success t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          填充按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-success t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          描边按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-success t-button--variant-dashed"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-success t-button--variant-text"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-warning t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          填充按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-warning t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          描边按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-warning t-button--variant-dashed"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-warning t-button--variant-text"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-danger t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          填充按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          描边按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-dashed"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-text"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base t-is-loading"
        style="position: relative;"
      >
        <div
          class="t-loading t-size-m"
        >
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            version="1.1"
            viewBox="0 0 14 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="1"
              y="1"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
        </div>
        <span
          class="t-button__text"
        >
          填充按钮
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`block.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <div
      style="display: flex; flex-direction: column; width: 50%; margin: auto;"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base t-size-full-width"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          主按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-size-full-width"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          次要按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed t-size-full-width"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-full-width"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ghost.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
    style="background: rgb(36, 36, 36); padding: 24px;"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-outline t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-dashed t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-text t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-success t-button--variant-outline t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-success t-button--variant-dashed t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-success t-button--variant-text t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-warning t-button--variant-outline t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-warning t-button--variant-dashed t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-warning t-button--variant-text t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-danger t-button--variant-outline t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-dashed t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-text t-button--ghost"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          幽灵按钮
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          确定
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          取消
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          下一步
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          上一步
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          新建主机
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          重装系统
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          批量续费
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-button--icon-only"
        style="position: relative;"
      >
        <svg
          class="t-icon t-icon-more t-size-m"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 4a1 1 0 100-2 1 1 0 000 2zM8 9a1 1 0 100-2 1 1 0 000 2zM9 13a1 1 0 11-2 0 1 1 0 012 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: relative;"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-button__text"
      >
        新建
      </span>
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
      style="position: relative;"
    >
      <svg
        class="t-icon t-icon-cloud-upload t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4.73 6.26l-.71.09A2.32 2.32 0 002 8.67c0 1.2.89 2.18 2 2.31v1a3.31 3.31 0 01-3-3.31 3.32 3.32 0 012.9-3.32A4.2 4.2 0 018 2c2 0 3.69 1.43 4.1 3.35 1.63.2 2.9 1.6 2.9 3.32a3.31 3.31 0 01-3 3.32v-1c1.11-.14 2-1.11 2-2.32 0-1.22-.9-2.2-2.02-2.32l-.71-.09-.15-.7A3.2 3.2 0 008 3a3.2 3.2 0 00-3.12 2.56l-.15.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M6.14 10.72L7.5 9.39l.03 5.12 1.01-.01-.03-5.1 1.37 1.34.72-.7-2.26-2.2a.5.5 0 00-.7 0l-2.22 2.18.72.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-button__text"
      >
        上传文件
      </span>
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base t-button--icon-only t-button--shape-circle"
      style="position: relative;"
    >
      <svg
        class="t-icon t-icon-discount t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.84 5.01A2 2 0 115 7.84 2 2 0 017.84 5zm-.7.7a1 1 0 10-1.42 1.42 1 1 0 001.41-1.41z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          clip-rule="evenodd"
          d="M2 7.95V2h5.95a1 1 0 01.7.3l6.14 6.13a1 1 0 010 1.41L9.84 14.8a1 1 0 01-1.41 0L2.29 8.66A1 1 0 012 7.95zM7.95 3l6.13 6.13-4.95 4.95L3 7.95V3h4.95z"
          fill="currentColor"
          fill-opacity="0.9"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base t-button--icon-only t-button--shape-circle"
      style="position: relative;"
    >
      <svg
        class="t-icon t-icon-cloud-download t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4.73 6.26l-.71.09A2.32 2.32 0 002 8.67c0 1.2.89 2.18 2 2.31v1a3.31 3.31 0 01-3-3.31 3.32 3.32 0 012.9-3.32A4.2 4.2 0 018 2c2 0 3.69 1.43 4.1 3.35 1.63.2 2.9 1.6 2.9 3.32a3.31 3.31 0 01-3 3.32v-1c1.11-.14 2-1.11 2-2.32 0-1.22-.9-2.2-2.02-2.32l-.71-.09-.15-.7A3.2 3.2 0 008 3a3.2 3.2 0 00-3.12 2.56l-.15.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M9.8 11.3l-1.3 1.29v-4.6h-1v4.6L6.2 11.3l-.7.7 2.15 2.15c.2.2.51.2.7 0L10.5 12l-.7-.71z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
      style="position: relative;"
    >
      <svg
        class="t-icon t-icon-search t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-button__text"
      >
        Function Icon
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`shape.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          主按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base t-button--shape-round"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          主按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base t-button--shape-circle"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          i
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          次要按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-button--shape-round"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          次要按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-button--shape-circle"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          i
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-dashed"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed t-button--shape-round"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed t-button--shape-circle"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          i
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text t-button--shape-round"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text t-button--shape-circle"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          i
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base t-size-s"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          主按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-size-s"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          次要按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed t-size-s"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          主按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          次要按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base t-size-l"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          主按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-size-l"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          次要按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed t-size-l"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-l"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`theme.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          填充按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          描边按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-dashed"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-text"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-danger t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          填充按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          描边按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-dashed"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          虚框按钮
        </span>
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-text"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          文字按钮
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
